--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
+
     <title>Minority Demographics</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
+        <nav class="navbar">
+            <a href="#" class="navbar-brand">Minority Demographics</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+            </ul>
         </nav>
-      </header>
+    </header>
+    <main>
+        <!-- Content goes here -->
+    </main>
 </body>
 </html>
