--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
             Join us today and be a part of the movement to create a more inclusive and equitable society, one event at a
             time.
         </p>
-        </p>
     </div>
+    <button class="goback">Go back</button>
 </body>
 
 </html>
