--- a/about.html
+++ b/about.html
@@ -42,7 +42,9 @@
             time.
         </p>
     </div>
-    <button class="goback">Go back</button>
+   <button class="goback" ><a href="index.html">Go back</a></button>
+   <img src="/AvramBaicu-INST377-Final/People Together.png"  class = "together" alt="Image of people coming together">
+
 </body>
 
 </html>
