--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
         </div>
       </div>
     </main>
+    <footer>
+      <button id="refreshBtn" >Refresh Data</button>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
