--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- added image onto my Icon it will show next to my title. http://clipart-library.com/clipart/891920.htm -->
+    <!-- <script type="text/javascript" src="http://127.0.0.1:5501/AvramBaicu-INST377-Final/env.js"></script>
+
+    <script src="env.js"></script> -->
     <link
       rel="icon"
       href="/AvramBaicu-INST377-Final/People Together.png"
@@ -25,11 +28,7 @@
       crossorigin=""
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.1/chart.umd.js"></script>
-    <!-- Compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js" type ="module"></script> -->
     <script type="text/javascript"></script>
   </head>
 
